Archive2/9d/435107fee57be2/output
main.cpp:9:9: error: no member named 'cout' in namespace 'std'
        Explicit( i );
        ^~~~~~~~~~~~~
main.cpp:3:28: note: expanded from macro 'Explicit'
#define Explicit( i ) std::cout << i
                      ~~~~~^
main.cpp:10:9: error: too few template arguments for class template 'static_for_E'
        static_for_E<i - decr>::invoke();
        ^
main.cpp:6:8: note: template is declared here
struct static_for_E {
       ^
main.cpp:13:2: error: expected ';' after struct
}
 ^
 ;
3 errors generated.
